--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,10 +19,13 @@ security:
             provider: app_user_provider
             form_login:
                 # "app_login" is the name of the route created previously
-                login_path: app_login
-                check_path: app_login
+                login_path: /login
+                check_path: /login
+                enable_csrf: true
+                csrf_token_id: authenticate
             logout:
                 path: /logout
+                target: /
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
