Mofif entité User pour choisirStore + fonction storeNearest

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,19 +1,16 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
+# config/services.yaml
 
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    google_api_key: 'AIzaSyBfm9oxRt_6dloALYE2hWR2_JQiD-q_YaU'
     images_directory: '%kernel.project_dir%/public/images'
 
 services:
-    # default configuration for services in *this* file
+    # Configuration par défaut pour les services dans ce fichier
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        autowire: true      # Injection automatique des dépendances dans vos services.
+        autoconfigure: true # Enregistrement automatique de vos services en tant que commandes, abonnés d'événements, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
+    # Configuration spécifique des services
     App\:
         resource: '../src/'
         exclude:
@@ -21,5 +18,12 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    # Définition des services personnalisés
+    App\Controller\RegistrationController:
+        arguments:
+            $googleApiKey: '%google_api_key%'
+        # Autres configurations de votre service, si nécessaire
+
+    App\Repository\AdressRepository:
+        arguments:
+            $googleApiKey: '%google_api_key%'
