--- a/.env
+++ b/.env
@@ -15,7 +15,9 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
+APP_DEBUG=0
+APP_URL=http://0.0.0.0:8080
 APP_SECRET=a1fb62ecc2d08102eba8811e420fc236
 ###< symfony/framework-bundle ###
 
